# gantry

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  package.xml
config/: default_path.yaml  motor_x.yaml  motor_y.yaml  motor_z.yaml  path_follower.yaml  waypoint_grid.yaml
gantry/: waypoint_helper.py
include/gantry/motor/: mcbl2805.hpp  mcbl3006.hpp  motor_interface.hpp
include/gantry/motor_component/: motor_component.hpp
include/gantry/path_follower_component/: path_follower_component.hpp
launch/: path_follower_node.launch.py  waypoint_grid_control_node.launch.py  xyz_motors.launch.py
nodes/: grid_position_control.py
scripts/: waypoint_generator.py
src/: path_follower.cpp  single_motor.cpp  xyz_motors.cpp
src/motor/: mcbl2805.cpp  mcbl3006.cpp  motor_interface.cpp
src/motor_component/: motor_component.cpp  motor_component_params.cpp
src/path_follower_component/: path_follower_component.cpp  path_follower_component_params.cpp
